# concil

./: LICENSE  README.md  concil_join.py  concil_run.py  concil_shell.py  dockerhub.py  image.py  pyproject.toml  setup.py
concil/: cli.py  concil_join.py  concil_run.py  cosign.py  dockerhub.py  image.py  notary.py  oci_spec.py  run.py  store.py  streams.py
concil/squashfs/: __init__.py
docs/: architecture.md  cli.md  cosign.md  dockerhub.md  image.md  index.md  notary.md  oci_spec.md  run.md  store.md  streams.md
tests/: test_cli.py  test_cosign.py  test_dockerhub.py  test_image.py  test_notary.py  test_oci_spec.py  test_run.py  test_squashfs.py  test_store.py  test_streams.py
tests/data/: test_large_dir.sqfs  test_large_inode.sqfs  test_long_symlink.sqfs  test_no_fragment.sqfs  test_plain.sqfs  test_plain_zstd.sqfs  test_xattr.sqfs  test_xattr_zstd.sqfs
