[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "concil"
version = "1.0.0"
authors = [
    { name = "ruema" },
]
description = "container manager"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "cryptography",
    "jwcrypto",
    "requests",
]

[project.urls]
Homepage = "https://github.com/ruema/concil"

[project.scripts]
concil = "concil.cli:main"
concil_run = "concil.concil_run:main"
concil_join = "concil.concil_join:main"
